--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,14 +12,16 @@ body {
 }
 .container {
   /* padding: 5rem; */
+  max-width: 65rem;
+  border-radius: 00.8rem;
+  overflow: hidden;
 }
 .cta {
   padding: 4rem;
   grid-column: 1 / -1;
-  border-top-left-radius: 0.8rem;
-  border-top-right-radius: 0.8rem;
 }
 .cta-heading {
+  font-size: 1.8rem;
   color: hsl(179, 62%, 43%);
 }
 .cta-sub-heading {
@@ -33,7 +35,6 @@ body {
 }
 .subscription {
   padding: 4rem;
-  border-bottom-left-radius: 0.8rem;
 }
 .subscription-plan {
   margin-top: 1.5rem;
@@ -53,7 +54,7 @@ body {
 button {
   border: none;
   margin-top: 3rem;
-  padding: 1.5rem 9.5rem;
+  padding: 1.8rem 9.5rem;
   border-radius: 0.4rem;
   font-weight: 700;
   box-shadow: 0px 10px 13px -3px rgba(161, 154, 154, 0.75);
@@ -67,5 +68,6 @@ button {
 .reason-heading {
 }
 .list-items {
+  line-height: 1.3;
   margin-top: 1rem;
 }
